...
  Widget build(BuildContext context) {
    final isDark = Theme.of(context).brightness == Brightness.dark;
    final customColors = context.customColors;

    final items = [
      const _BottomNavItem(
        label: "Hôm nay",
        activeIcon: Icons.today_rounded,
        inactiveIcon: Icons.today_outlined,
      ),
      const _BottomNavItem(
        label: "Tiến độ",
        activeIcon: Icons.insights_rounded,
...
